# Deepfake

./: .gitignore  CONTRIBUTING.md  README.md  analyze_failures.py  docker-compose.yml  main.py  preprocess_config.toml  pyproject.toml  requirements.txt  visualize_crops.py
artifacts/: celeb_dc_missing_face_detection_videos.csv  celeb_dc_videos_master.csv  celeb_dc_videos_master.parquet  videos_master.csv  visualize_master.csv
configs/: __init__.py  loggings.py  settings.py
dataloader/: dataset.py
docs/: architecture.md  data-contracts.md  documentation-changes.md  preprocessing-pipeline.md  summary_documentation.md  training-workflow.md  tài liệu pipeline tổng hợp.docx  ~$i liệu pipeline tổng hợp.docx
preprocessing/: __init__.py  _face_detection_pipeline.py  analyze_videos_master.py  build_clips.py  convert_to_webdataset.py  count_celeb_status.py  count_clips.py  data_standardization.py  dataset_splitting.py  download_faceforensics.py  face_detection.py  filter_celeb_frame_metadata.py  frame_extractor.py  metadata_cleaner.py  metadata_level.py  preprocessing.py  rebuild_metadata.py  run_visualize_pipeline.py
tests/: test_build_clips.py  test_dataset_loader.py  test_face_detection.py  test_face_detection_crop.py  test_face_detection_split.py  test_frame_extractor.py  test_metadata_level.py  test_spatio_temporal_detector.py  test_training_train.py
training/: __init__.py  ablation_flops.py  build_weighted_fusion_checkpoint.py  ensemble_predictions.py  fusion_head.py  model_flops.py  model_parameters.py  plot_confusion_matrix.py  plot_training_figures.py  test.py  (+5 more)
(+12 files in other folders)
