[project]
name = "deepfake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=6.11.0",
    "loguru>=0.7.3",
    "minio>=7.2.20",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "retina-face>=0.0.17",
    "scikit-learn>=1.8.0",
    "tf-keras>=2.20.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "webdataset>=1.0.2",
]
