[project]
name = "deepfake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=6.14.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.9",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "retina-face>=0.0.17",
    "scikit-learn>=1.8.0",
    "tensorflow-macos>=2.16.2",
    "tensorflow-metal>=1.2.0",
    "tf-keras>=2.16.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
    "webdataset>=1.0.2",
]
